# ArduinoLibrarySkeleton

./: CMakeLists.txt  README.md  keywords.txt  library.properties
doc/html/: _arduino_library_skeleton_8h_source.html  annotated.html  annotated_dup.js  arduinolibraryskeleton_8h_source.html  class_arduino_library_skeleton-members.html  class_arduino_library_skeleton.html  class_arduino_library_skeleton.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js
examples/BasicUsage/: BasicUsage.ino
src/: ArduinoLibrarySkeleton.h  arduinolibraryskeleton.cpp  arduinolibraryskeleton.h
